--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,17 @@
 <!-- Nagłówek -->
 <nav>
   <div class="nav-wrapper teal darken-3">
-    <span class="brand-logo center">Najlepsze cytaty</span>
+    <span class="brand-logo center">The best quotations</span>
   </div>
 </nav>
 <!-- koniec nagłówka -->
 
 <div class="container q-container">
   <!--Dodawanie cytatu-->
-  <button class="btn-floating teal add-button">
+  <button class="btn-floating teal add-button" (click)="onSwitchForm()">
     <i class="material-icons">add</i>
   </button>
-  <div class="row">
+  <div class="row edit-row" [class.drawer]="showForm" >
     <div class="input-field col s4">
       <input type="text" placeholder="Autor" />
     </div>
@@ -19,7 +19,7 @@
       <input type="text" placeholder="Cytat" />
     </div>
     <div class="input-field col s2">
-      <button class="btn small">Dodaj</button>
+      <button class="btn small">Add quotation </button>
     </div>
   </div>
   <!-- Koniec dodawanie cytatu -->
