--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,13 +13,13 @@
   </button>
   <div class="row edit-row" [class.drawer]="showForm" >
     <div class="input-field col s4">
-      <input type="text" placeholder="Author" />
+      <input type="text" placeholder="Author" [(ngModel)]="quotation.author" />
     </div>
     <div class="input-field col s6">
-      <input type="text" placeholder="Quotation" />
+      <input type="text" placeholder="Quotation" [(ngModel)]="quotation.sentence" />
     </div>
     <div class="input-field col s2">
-      <button class="btn small">Add quotation </button>
+      <button class="btn small" (click)="addQuotation()" >Add quotation </button>
     </div>
   </div>
   <!-- Koniec dodawanie cytatu -->
