--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,10 +40,10 @@
             </div>
             <div class="card-action right-align">
               <span class="badge grey darken-2 left white-text">     {{q.votes}}</span>
-              <button class="btn blue mr-5">
+              <button class="btn blue mr-5" (click) = "addVote(q, +1)">
                 <i class="material-icons">exposure_plus_1</i>
               </button>
-              <button class="btn brown">
+              <button class="btn brown" (click) = "addVote(q, -1)">
                 <i class="material-icons">exposure_neg_1</i>
               </button>
             </div>
