--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,23 +57,27 @@
     <!-- Sekcja rankigów -->
     <div class="col s4">
       <div class="col s12">
-        <h5>Najlepsze</h5>
+        <h5>The best</h5>
         <div class="collection">
-          <p class="collection-item">
+          <ng-container *ngFor="let q of quotes">
+          <p class="collection-item" *ngIf="q.votes >0">
             <span class="blue lighten-4 badge">7</span>
-            Jeśli nie chcesz mojej zguby, krrrokodyla daj mi luby.<br />
-            <span class="blue-text">Aleksander Fredro</span>
+            {{q.sentence}}<br />
+            <span class="blue-text">{{q.author}}</span>
           </p>
+        </ng-container>
         </div>
       </div>
       <div class="col s12">
-        <h5>Najgorsze</h5>
+        <h5>The worst</h5>
         <div class="collection">
-          <p class="collection-item">
+          <ng-container *ngFor="let q of quotes">
+          <p class="collection-item" *ngIf="q.votes < 0">
             <span class="blue lighten-4 badge">-2</span>
-            Bądź dobrej myśli, bo po co być złej.<br />
-            <span class="blue-text">Stanisław Lem</span>
+            {{q.sentence}}<br />
+            <span class="blue-text">{{q.author}}</span>
           </p>
+        </ng-container>
         </div>
       </div>
     </div>
