--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 <!-- Nagłówek -->
-<nav>
-  <div class="nav-wrapper teal darken-3">
-    <span class="brand-logo center">The best quotations</span>
-  </div>
-</nav>
+<app-navbar></app-navbar>
 <!-- koniec nagłówka -->
 
 <div class="container q-container">
