--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
   <button class="btn-floating teal add-button" >
     <i class="material-icons">add</i>
   </button>
-  
- <app-form></app-form>
+
+ <app-form (newQuotation)="onNewQuotation($event)"></app-form>
   <!-- Koniec dodawanie cytatu -->
 
   <div class="row">
