vote buttons component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,18 +28,10 @@
             </div>
             <div class="card-action right-align">
               <span class="badge grey darken-2 left white-text">     {{q.votes}}</span>
+            <app-vote-buttons (voteValue)="addVote(q, $event)">
 
-              <app-button 
-                customClasses="btn blue mr-5" 
-                (clickButton) = "addVote(q, +1)">
-                <i class="material-icons">exposure_plus_1</i>
-              </app-button>
-
-              <app-button 
-                customClasses="btn brown" 
-                (clickButton) = "addVote(q, -1)">
-                <i class="material-icons">exposure_neg_1</i>
-              </app-button>
+            </app-vote-buttons>
+  
             </div>
           </div>
          
