--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,51 +1,30 @@
-<!-- Nagłówek -->
+<!-- Header -->
 <app-navbar title="The best sentences"></app-navbar>
-<!-- koniec nagłówka -->
+<!-- End header -->
 
 <div class="container q-container">
 
-  <!--Dodawanie cytatu-->
+  <!--Add sentence-->
  <app-button customClasses= "btn-floating teal add-button" (click)="form.onSwitchForm()">
    <i class="material-icons">add</i>
 </app-button>
 
  <app-form #form (newQuotation)="onNewQuotation($event)"></app-form>
-  <!-- Koniec dodawanie cytatu -->
+  <!-- End add sentennce -->
 
   <div class="row">
-    <!-- Lista cytatów -->
+    <!-- List of sentences-->
     <div class="col s8">
-      <div class="row">
-        <div class="col s12">
-          <div class="card teal hoverable" 
-          *ngFor="let q of quotes; let odd= odd"
-          [ngClass]="odd ? 'accent-4' : 'accent-5'">
-            <div class="card-content white-text">
-              <span class="card-title">
-               {{q.sentence}}
-              </span>
-              {{q.author}}
-            </div>
-            <div class="card-action right-align">
-              <span class="badge grey darken-2 left white-text">     {{q.votes}}</span>
-            <app-vote-buttons (voteValue)="addVote(q, $event)">
-
-            </app-vote-buttons>
-  
-            </div>
-          </div>
-         
-        </div>
-      </div>
+      <app-list [quotes]="quotes" (vote)="addVote($event.quotation, $event.value)"></app-list>
     </div>
-    <!-- Koniec lista cytatów -->
+    <!-- End list sentences -->
 
-    <!-- Sekcja rankigów -->
+    <!-- Ranking section -->
     <div class="col s4">
      <app-ranking [quotes] = "bestQuotes()" title="The best"></app-ranking>
      <app-ranking [quotes] = "worstQuotes()" title="The worst"></app-ranking>
       
     </div>
-    <!-- Sekcja rankigów -->
+    <!-- End ranking section -->
   </div>
 </div>
